fixed bugs and added documents.
